Customized theme for blog with custom colors for links

--- a/source/index.html
+++ b/source/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: A Tech Blog by Jake Zimmerman
-description: "A tech blog by Jake Zimmerman. Updates occaisonally with tips, tricks, and hacks that have helped me out."
-categories: [Jekyll, theme, themes, responsive, blog, modern, tech, hacks]
-keywords: Jekyll theme themes responsive blog modern tech hacks
+title: Gerard Ketuma's Thoughts
+description: "Gerard Ketuma's Blog on Web Development tips and techniques."
+categories: [Ruby, Rails, JavaScript, PHP, HTML/CSS, Drupal, AngularJS, BackboneJS]
+keywords: Ruby, Rails, JavaScript, PHP, HTML/CSS, Drupal, AngularJS, BackboneJS
 image:
-  feature: /images/threaded-blue-on-black-cropped.jpg
+  feature: /images/desktouch.jpg
 ---
 
 {% assign index = true %}
