Working on the first real post for the blog

--- a/source/index.html
+++ b/source/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Gerard Ketuma's Thoughts
 description: "Gerard Ketuma's Blog on Web Development tips and techniques."
-categories: [Ruby, Rails, JavaScript, PHP, HTML/CSS, Drupal, AngularJS, BackboneJS]
+categories: [Ruby, Rails, JavaScript, PHP, HTML/CSS, Drupal, AngularJS, MEAN.JS]
 keywords: Ruby, Rails, JavaScript, PHP, HTML/CSS, Drupal, AngularJS, BackboneJS
 image:
   feature: /images/desktouch.jpg
